fix style of dropdown in how-we-work page on safari

--- a/themes/goalify/source/css/site/_how-we-work.scss
+++ b/themes/goalify/source/css/site/_how-we-work.scss
@@ -75,6 +75,7 @@
 					border: none;
 					background-color: transparent;
 					outline: none;
+					-webkit-appearance: none;
 				}
 			}
 		}
